--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>RunLg. A Training Log for runners.</title>
     <meta charset="utf-8">
@@ -157,3 +159,4 @@
 
 
 </body>
+</html>
